[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rapidphase"
version = "0.1.2"
description = "Fast GPU-accelerated phase unwrapping using PyTorch (CUDA/MPS/CPU)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["phase unwrapping", "InSAR", "GPU", "PyTorch", "interferometry"]

dependencies = [
    "numpy>=1.20",
    "torch>=2.0",
    "scipy>=1.7",
]

[project.optional-dependencies]
raster = ["rasterio>=1.2"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/smuinsar/rapidphase/tree/main/"
Repository = "https://github.com/smuinsar/rapidphase"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
